--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-markdown": "^7.1.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.5.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
