--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -6,10 +6,20 @@ upstream client {
 server {
   listen 80;
 
-  location / {
+
+  location /client {
       root /usr/share/nginx/html;
       index index.html index.htm;
       try_files $uri $uri/ /index.html;
+
+  }
+
+  location / {
+     proxy_pass http://localhost:4000;
+     proxy_set_header Host $proxy_host; 
+     proxy_set_header X-Real-IP $remote_addr;
+     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
   }
   
 }
