nginx reverse-proxy fixed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     build:
       dockerfile: dockerfile
       context: ./
+    ports:
+      - '4000:80'
     depends_on:
       - redis
 
