--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,5 +1,9 @@
 upstream client {
-  server localhost:3000;
+  server client:3000;
+}
+
+upstream api {
+  server api:4000;
 }
 
 
@@ -7,19 +11,21 @@ server {
   listen 80;
 
 
-  location /client {
+  location / {
       root /usr/share/nginx/html;
       index index.html index.htm;
       try_files $uri $uri/ /index.html;
 
   }
 
-  location / {
-     proxy_pass http://localhost:4000;
+  location /api {
+     rewrite /api/(.*) /$1 break;
+     proxy_pass http://api;
      proxy_set_header Host $proxy_host; 
      proxy_set_header X-Real-IP $remote_addr;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
   }
+
   
 }
